<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_GET_to_B"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/BTN_send_GET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bxCompBIP" />

    <Button
        android:id="@+id/btn_POST_to_B"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/BTN_send_POST"
        app:layout_constraintEnd_toEndOf="@+id/btn_GET_to_B"
        app:layout_constraintStart_toStartOf="@+id/btn_GET_to_B"
        app:layout_constraintTop_toBottomOf="@+id/btn_GET_to_B" />

    <EditText
        android:id="@+id/bxCompBIP"
        android:layout_width="145dp"
        android:layout_height="39dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/TXT_TargetB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_CompB" />

    <Button
        android:id="@+id/btn_GET_to_A"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/BTN_send_GET"
        app:layout_constraintBottom_toTopOf="@+id/btn_POST_to_B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_GET_to_B" />

    <Button
        android:id="@+id/btn_POST_to_A"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/BTN_send_POST"
        app:layout_constraintEnd_toEndOf="@+id/btn_GET_to_A"
        app:layout_constraintStart_toStartOf="@+id/btn_GET_to_A"
        app:layout_constraintTop_toBottomOf="@+id/btn_GET_to_A" />

    <TextView
        android:id="@+id/txt_CompA"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginTop="50dp"
        android:text="@string/TXT_TargetA"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/bxCompAIP"
        app:layout_constraintStart_toStartOf="@+id/bxCompAIP"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_CompB"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/TXT_TargetB"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/bxCompBIP"
        app:layout_constraintStart_toStartOf="@+id/bxCompBIP"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bxCompAIP"
        android:layout_width="145dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/TXT_TargetA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_CompA" />

    <TextView
        android:id="@+id/communicationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:text="@string/TXT_Base_Middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_clear_hosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/BTN_clear_hosts"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/communicationText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_POST_to_A" />

</androidx.constraintlayout.widget.ConstraintLayout>


